[gd_scene load_steps=27 format=3 uid="uid://j1l0ctfnmr85"]

[ext_resource type="Script" path="res://scripts/present.gd" id="1_w7his"]
[ext_resource type="Texture2D" uid="uid://bfbod4c35xu3i" path="res://sprites/Presents&PickUps/present.png" id="2_stovw"]
[ext_resource type="Texture2D" uid="uid://b5jlwdy00roo2" path="res://sprites/Presents&PickUps/presentShadow.png" id="3_3ug5x"]

[sub_resource type="Animation" id="Animation_wkb12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3lsti"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.55, 0.55), Vector2(1, 1), Vector2(1.125, 1.125), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1514"]
_data = {
"RESET": SubResource("Animation_wkb12"),
"float": SubResource("Animation_3lsti")
}

[sub_resource type="Gradient" id="Gradient_po8jp"]
offsets = PackedFloat32Array(0.669261, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h3cdj"]
gradient = SubResource("Gradient_po8jp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i8e61"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 720.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_h3cdj")

[sub_resource type="AtlasTexture" id="AtlasTexture_7y53g"]
atlas = ExtResource("2_stovw")
region = Rect2(0, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdli8"]
atlas = ExtResource("2_stovw")
region = Rect2(9, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_353hu"]
atlas = ExtResource("2_stovw")
region = Rect2(18, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_tci0p"]
atlas = ExtResource("2_stovw")
region = Rect2(27, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfl0b"]
atlas = ExtResource("2_stovw")
region = Rect2(36, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc5mx"]
atlas = ExtResource("2_stovw")
region = Rect2(45, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twe7"]
atlas = ExtResource("2_stovw")
region = Rect2(54, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4xsw"]
atlas = ExtResource("2_stovw")
region = Rect2(63, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwfvw"]
atlas = ExtResource("2_stovw")
region = Rect2(72, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmpje"]
atlas = ExtResource("2_stovw")
region = Rect2(81, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq211"]
atlas = ExtResource("2_stovw")
region = Rect2(90, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu3wx"]
atlas = ExtResource("2_stovw")
region = Rect2(99, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w5wv"]
atlas = ExtResource("2_stovw")
region = Rect2(108, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7knd"]
atlas = ExtResource("2_stovw")
region = Rect2(117, 0, 9, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_yaxkx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y53g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdli8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_353hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tci0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfl0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc5mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4xsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwfvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmpje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq211")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu3wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w5wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7knd")
}],
"loop": false,
"name": &"color",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ooua3"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a3sym"]
radius = 2.23607

[node name="Present" type="CharacterBody2D" groups=["present"]]
collision_layer = 6
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_w7his")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../presentactual")
libraries = {
"": SubResource("AnimationLibrary_y1514")
}
autoplay = "float"

[node name="shootParticles" type="GPUParticles2D" parent="."]
show_behind_parent = true
y_sort_enabled = true
position = Vector2(0, -1)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_i8e61")
lifetime = 0.5
randomness = 0.5

[node name="presentactual" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_yaxkx")
animation = &"color"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="presentactual"]
y_sort_enabled = true
remote_path = NodePath("../../shootParticles")
update_rotation = false
update_scale = false

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.607843)
z_index = -1
y_sort_enabled = true
position = Vector2(0, 3)
texture = ExtResource("3_3ug5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
scale = Vector2(1.75, 1.75)
shape = SubResource("CircleShape2D_ooua3")

[node name="pickupArea" type="Area2D" parent="." groups=["present"]]
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupArea"]
y_sort_enabled = true
shape = SubResource("CircleShape2D_a3sym")

[node name="follow_stop_delay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
